[package]
name = "stavros_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
#tokio-tungstenite = { version = "0.20", features = ["__rustls-tls"] }
url = "2.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal_macros = "1.25"
statrs = "0.16" # ή την τελευταία διαθέσιμη έκδοση

rust_decimal = { version = "1.25", features = ["maths"] }

tokio-stream = "0.1"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
native-tls = { version = "0.2", features = ["vendored"] }  # Bundles OpenSSL



# --- Numerical Libraries for Kalman Filter and potentially Bayesian ---
nalgebra = "0.32" # High-performance linear algebra library
# statrs = "0.17"   # Basic statistics (mean, variance, distributions - might be useful)
# rand = "0.8"      # For sampling if doing Monte Carlo Bayesian simulation

# For a robust Decimal square root (not in rust_decimal directly)
# (Alternatively, you can implement Newton-Raphson or other methods for Decimal)
# You might need to add a custom implementation or find a crate for this.
# For now, we'll stick to f64 conversion for sqrt where strictly necessary
log = "0.4"         # For logging (replace println for better management)
env_logger = "0.11" # For initializing logging
fastrand = "2.0" # Or the latest version
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
digest = "0.10"  # Required for the KeyInit trait
